data/derived/comb/progs/unify/prog3220.ml.out
Characters 20-21:
  let _ = bigMul [2] [1];;
                      ^
Error: This expression has type int but an expression was expected of type
         int list
